docs: update ForwardMessages
